--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
   --projects-border-color: 1px solid #eeeeee;
   --upper-line-color: 1px solid #ececec;
   --footer-icons-bg-color: rgba(255, 255, 255, 0.1);
+  --backdrop-bg-color: rgba(0, 0, 0, 0.2);
 
   /* icons colors */
   --primary-icons-fill-color: #afb1b8;
@@ -42,6 +43,12 @@
     1px 4px 6px rgba(0, 0, 0, 0.16);
   --portfolio-btn-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  --modal-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  /* others */
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* можна настроїти список
@@ -179,16 +186,18 @@ img {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
 
-.contacts-list {
-  display: flex;
-  margin-left: auto;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
+}
+
+.contacts-list {
+  display: flex;
+  margin-left: auto;
 }
 
 .header-phone,
@@ -199,6 +208,8 @@ img {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-phone:hover,
@@ -209,7 +220,22 @@ img {
 }
 
 .header-link.current {
+  position: relative;
   color: var(--accent-color);
+}
+
+.header-link.current::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 /* ----------------Hero ----------------------*/
@@ -242,6 +268,12 @@ img {
 }
 
 .hero-btn {
+  display: inline-block;
+  padding: 10px 32px;
+  border: none;
+  min-width: 200px;
+  border-radius: 4px;
+
   color: var(--white-text-color);
   background-color: var(--accent-color);
   box-shadow: var(--hero-btn-box-shadow);
@@ -249,12 +281,10 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  display: inline-block;
-  padding: 10px 32px;
+
   cursor: pointer;
-  border-radius: 4px;
-  border: none;
-  min-width: 200px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -306,7 +336,7 @@ img {
 .benefits-subtitle {
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -337,6 +367,28 @@ img {
 
 .activity-item {
   flex-basis: calc((100% - var(--card-set-gap) * 2) / 3);
+  position: relative;
+}
+.activity-description-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+
+.activity-description {
+  color: var(--white-text-color);
+  font-weight: 700;
+
+  line-height: 1.14;
+  text-align: center;
+
+  text-transform: uppercase;
 }
 
 /*--------------- Наша команда ----------------*/
@@ -406,8 +458,11 @@ img {
   height: 44px;
 
   color: var(--primary-icons-fill-color);
-  /* background-color: var(--primary-bg-color); */
+
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -425,25 +480,6 @@ img {
   background-color: var(--accent-color);
   color: var(--white-text-color);
 } */
-
-/* ========================================================================================================================== */
-
-/* Додатковий спосіб. При ньому потрібно видалити COLOR з social-link */
-/* .socials-icon {
-  fill: var(--primary-icons-fill-color);
-}
-
-.socials-link:hover,
-.socials-link:focus {
-  background-color: var(--accent-color);
-}
-
-.socials-link:hover .socials-icon,
-.socials-link:focus .socials-icon {
-  background-color: var(--accent-color);
-  fill: var(--white-text-color);
-} */
-/* =========================================================================================================================== */
 
 /* -----------Постоянные Клиенты------------ */
 .section.clients {
@@ -474,6 +510,9 @@ img {
   border-radius: 4px;
 
   color: var(--primary-icons-fill-color);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
@@ -485,26 +524,6 @@ img {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
-
-/* .clients-link:hover .clients-icon {
-  fill: var(--accent-color);
-} */
-
-/* .clients-link.current {
-  border-color: var(--accent-color);
-} */
-
-/* .clients-icon.current {
-  fill: var(--accent-color);
-} */
-
-/* .clients-item {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  gap: 30px;
-} */
 
 /*------------ Footer -----------------*/
 
@@ -543,6 +562,8 @@ img {
   font-weight: 400;
   line-height: 1.71;
   margin-bottom: 9px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -564,6 +585,8 @@ img {
 
   font-weight: 400;
   line-height: 1.71;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-mail:hover,
@@ -596,12 +619,12 @@ img {
   width: 44px;
   height: 44px;
 
-  /* color: var(--white-text-color); */
   background-color: var(--footer-icons-bg-color);
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Додатковий спосіб. При ньому потрібно видалити COLOR з social-link */
 .socials-icon-footer {
   fill: var(--white-text-color);
 }
@@ -616,11 +639,6 @@ img {
   background-color: var(--accent-color);
   fill: var(--white-text-color);
 }
-
-/* .socials-link-footer.current {
-  background-color: var(--accent-color);
-  color: var(--white-text-color);
-} */
 
 /*--------------------- Портфолио ---------------------*/
 
@@ -660,16 +678,19 @@ img {
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--accent-color);
   color: var(--white-text-color);
+  box-shadow: var(--portfolio-btn-shadow);
 }
 
 /*--- Проекти портфоліо ---*/
-
 .projects-list {
   display: flex;
   flex-wrap: wrap;
@@ -684,52 +705,48 @@ img {
   display: block;
 }
 
-/* --- альтернативний варіант №1  початок---*/
-/* .projects-list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.projects-link:hover,
+.projects-link:focus {
+  box-shadow: var(--portfolio-card-shadow);
+}
+
+.overlay-text {
+  font-size: 18px;
+  line-height: 1.56;
+
+  letter-spacing: 0.03em;
+
+  color: var(--white-text-color);
+}
+
+.project-element {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transform: translateY(100%);
 
   display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
-} */
+  align-items: center;
+  justify-content: center;
 
-/* .projects-item {
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-} */
-/* ----альтернативний варіант №1 кінець------ */
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
 
-/* ----альтернативний варіант №2  початок------- */
-/* .projects-list {
-  display: flex;
-  flex-wrap: wrap;
-} */
-/* 
-.projects-item {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-} */
+  background-color: rgba(33, 150, 243, 0.9);
 
-/* 
-.projects-item:nth-child(3n) {
-  margin-right: 0;
-} */
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-/* 
-.projects-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-} */
-
-/* ---альтернативний варіант №2 кінець--- */
-
-/* .projects-item {
-  background-color: var(--primary-bg-color);
-} */
+.project-element:hover .project-overlay {
+  transform: translateY(0);
+}
 
 .projects-subtitle {
   color: var(--primary-text-color);
@@ -754,12 +771,72 @@ img {
   border-top: none;
 }
 
-.projects-link:hover,
-.projects-link:focus {
-  box-shadow: var(--portfolio-card-shadow);
+/* ============ Modal window ============ */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: var(--backdrop-bg-color);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-btn:hover,
-.filter-btn:focus {
-  box-shadow: var(--portfolio-btn-shadow);
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--primary-bg-color);
+  box-shadow: var(--modal-box-shadow);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.9);
+} */
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  cursor: pointer;
 }
