--- a/css/styles.css
+++ b/css/styles.css
@@ -369,25 +369,22 @@ img {
   flex-basis: calc((100% - var(--card-set-gap) * 2) / 3);
   position: relative;
 }
-.activity-description-container {
+
+.activity-description {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
 
-  padding-top: 27px;
-  padding-bottom: 27px;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.activity-description {
   color: var(--white-text-color);
+  background-color: rgba(47, 48, 58, 0.8);
   font-weight: 700;
-
   line-height: 1.14;
-  text-align: center;
-
   text-transform: uppercase;
 }
 
@@ -703,6 +700,7 @@ img {
 
 .projects-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-link:hover,
@@ -719,12 +717,12 @@ img {
   color: var(--white-text-color);
 }
 
-.project-element {
+.projects-element {
   position: relative;
   overflow: hidden;
 }
 
-.project-overlay {
+.projects-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -744,7 +742,8 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-element:hover .project-overlay {
+.projects-link:hover .projects-overlay,
+.projects-link:focus .projects-overlay {
   transform: translateY(0);
 }
 
